Bug 490712 - Empty dialog when clicking "Configure Kate..."
Summary: Empty dialog when clicking "Configure Kate..."
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.4.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-23 16:08 UTC by Kwok Guy
Modified: 2024-07-30 09:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The empty dialog (70.96 KB, image/png)
2024-07-23 16:08 UTC, Kwok Guy
Details
Another screenshot (72.04 KB, image/png)
2024-07-28 01:36 UTC, Kwok Guy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kwok Guy 2024-07-23 16:08:52 UTC
Created attachment 171931 [details]
The empty dialog

STEPS TO REPRODUCE
1. Settings -> Configure Kate...

OBSERVED RESULT
An empty dialog shows and closes in a short time, followed by the proper configure dialog displaying.

EXPECTED RESULT
The empty dialog should not appear at all.

SOFTWARE/OS VERSIONS
Operating System: Microsoft Windows
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.1
Comment 1 Christoph Cullmann 2024-07-27 15:59:02 UTC
Could you try the nightly build?

That shows a proper dialog for me.

https://kate-editor.org/get-it/
Comment 2 Kwok Guy 2024-07-28 01:36:14 UTC
Created attachment 172058 [details]
Another screenshot
Comment 3 Kwok Guy 2024-07-28 01:37:56 UTC
(In reply to Christoph Cullmann from comment #1)
> Could you try the nightly build?
> 
> That shows a proper dialog for me.
> 
> https://kate-editor.org/get-it/

What I mean is not that the correct configuration dialog box does not appear, but that a blank dialog box appears before the correct dialog box shows up.

I have checked the latest version and the problem still exists. I've posted another screenshot.
Comment 4 Christoph Cullmann 2024-07-28 19:20:45 UTC
I see, I misread that, sorry, think I know what that issue is, will fix it.
Comment 5 Christoph Cullmann 2024-07-28 21:51:19 UTC
Git commit 7c3bef200aec87a262357a6a07a9aa600f8a688d by Christoph Cullmann.
Committed on 28/07/2024 at 21:51.
Pushed by cullmann into branch 'master'.

try to avoid to create parent less widgets

should avoid pseudo toplevel windows on dialog creation

M  +7    -7    apps/lib/kateconfigdialog.cpp

https://invent.kde.org/utilities/kate/-/commit/7c3bef200aec87a262357a6a07a9aa600f8a688d
Comment 6 Christoph Cullmann 2024-07-29 18:38:04 UTC
Hmm, no, still not fixed.
Comment 7 Christoph Cullmann 2024-07-29 18:39:10 UTC
Still happens, happens with all plugins disabled, too.
Comment 8 Christoph Cullmann 2024-07-29 18:40:20 UTC
Hmm, happens with Konsole config dialog, too.
Comment 9 Christoph Cullmann 2024-07-29 18:51:52 UTC
I think the issue is the 

KPageViewPrivate::KPageViewPrivate(KPageView *_parent)
    : q_ptr(_parent)
    , model(nullptr)
    , faceType(KPageView::Auto)
    , layout(nullptr)
    , stack(nullptr)
    , titleWidget(nullptr)
    , searchLineEditContainer(new QWidget())
    , searchLineEdit(new QLineEdit())
    , view(nullptr)
{
}

    , searchLineEditContainer(new QWidget())
    , searchLineEdit(new QLineEdit())

that stuff is show before we add it to a layout and perhaps even before the dialog is shown.
Comment 10 Bug Janitor Service 2024-07-29 19:02:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/259
Comment 11 Christoph Cullmann 2024-07-29 19:45:05 UTC
Git commit 2c356b7bbfcf3ec786e3bf2fd1ad1ebc81f68e42 by Christoph Cullmann.
Committed on 29/07/2024 at 19:45.
Pushed by cullmann into branch 'release/24.08'.

try to avoid to create parent less widgets

should avoid pseudo toplevel windows on dialog creation


(cherry picked from commit 7c3bef200aec87a262357a6a07a9aa600f8a688d)

Co-authored-by: Christoph Cullmann <christoph@cullmann.io>

M  +7    -7    apps/lib/kateconfigdialog.cpp

https://invent.kde.org/utilities/kate/-/commit/2c356b7bbfcf3ec786e3bf2fd1ad1ebc81f68e42
Comment 12 Christoph Cullmann 2024-07-30 09:02:41 UTC
Git commit ded75732730b7dd166baf10537f07a4d17b83586 by Christoph Cullmann.
Committed on 29/07/2024 at 19:00.
Pushed by cullmann into branch 'master'.

avoid the creation of toplevel widget

leads to artifact windows on Windows and macOS

M  +5    -3    src/kpageview.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/-/commit/ded75732730b7dd166baf10537f07a4d17b83586