avoid the creation of toplevel widget

leads to artifact windows on Windows and macOS
BUG: 490712